--- a/index.html
+++ b/index.html
@@ -81,28 +81,21 @@
       </section>
 
       <!-- Operations -->
-      <section class="section">
+      <section class="operations section">
         <div class="container">
           <h2 class="section-title">Чем мы занимаемся</h2>
           <ul class="operations list">
             <li class="item">
-              <a href="#">
-                <img src="./images/pc.jpg" alt="pc" width="370"/>
-              </a>
+              <img src="./images/pc.jpg" alt="pc" width="370"/>
             </li>
             <li class="item">
-              <a href="#">
                 <img src="./images/laptop.jpg" alt="laptop" width="370"/>
-              </a>
             </li>
             <li class="item">
-              <a href="#">
                 <img src="./images/tablet.jpg" alt="tablet" width="370"/>
-              </a>
             </li>
           </ul>
         </div>
-
       </section>
 
       <!-- Team -->
@@ -112,23 +105,31 @@
           <ul class="team list">
             <li class="item">
               <img src="./images/igor-demianenko.jpg" alt="igor-demianenko" width="270"/>
-              <h3 class="title">Игорь Демьяненко</h3>
-              <p>Product Designer</p>
+              <div class="team-member">
+                <h3 class="title">Игорь Демьяненко</h3>
+                <p>Product Designer</p>
+              </div>
             </li>
             <li class="item">
               <img src="./images/olga-repina.jpg" alt="olga-repina" width="270"/>
-              <h3 class="title">Ольга Репина</h3>
-              <p>Frontend Developer</p>
+              <div class="team-member">
+                <h3 class="title">Ольга Репина</h3>
+                <p>Frontend Developer</p>
+              </div>
             </li>
             <li class="item">
               <img src="./images/nikolai-tarasov.jpg" alt="nikolai-tarasov" width="270"/>
-              <h3 class="title">Николай Тарасов</h3>
-              <p>Marketing</p>
+              <div class="team-member">
+                <h3 class="title">Николай Тарасов</h3>
+                <p>Marketing</p>
+              </div>
             </li>
             <li class="item">
               <img src="./images/mikhail-iermakov.jpg" alt="mikhail-iermakov" width="270"/>
-              <h3 class="title">Михаил Ермаков</h3>
-              <p>UI Designer</p>
+              <div class="team-member">
+                <h3 class="title">Михаил Ермаков</h3>
+                <p>UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
