--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
         </header>
 
         <main>
-            <div class="container">
+            <div class="portfolio container">
                 <!-- Buttons -->
                 <h1 class="visually-hidden">Портфолио</h1>
                 <ul class="selection list">
@@ -64,9 +64,7 @@
                 <ul class="portfolio list">
                     <li class="item">
                         <a href="#" class="card">
-                            <div class="card-thumb">
-                                <img src="./images/potrfolio-technokriak.jpg" alt="технокряк" width="370" height="294">
-                            </div>
+                            <img src="./images/potrfolio-technokriak.jpg" alt="технокряк" width="370" height="294">
                             <div class="card-content">
                                 <h2 class="card-name">Технокряк</h2>
                                 <p class="card-group">Веб-сайт</p>
@@ -75,10 +73,8 @@
                     </li>
                     <li class="item">
                         <a href="#" class="card">
-                            <div class="card-thumb">
-                                <img src="./images/potrfolio-poster-no-at-gs.jpg" alt="poster-new-orleans-at-golden-star" width="370"
-                                height="294">
-                            </div>
+                            <img src="./images/potrfolio-poster-no-at-gs.jpg" alt="poster-new-orleans-at-golden-star" width="370"
+                            height="294">
                             <div class="card-content">
                                 <h2 class="card-name">Постер New Orlean vs Golden Star</h2>
                                 <p class="card-group">Дизайн</p>
@@ -87,9 +83,7 @@
                     </li>
                     <li class="item">
                         <a href="#" class="card">
-                            <div class="card-thumb">
-                                <img src="./images/potrfolio-seafood-restaurant.jpg" alt="seafood-restaurant" width="370" height="294">
-                            </div>
+                            <img src="./images/potrfolio-seafood-restaurant.jpg" alt="seafood-restaurant" width="370" height="294">
                             <div class="card-content">
                                 <h2 class="card-name">Ресторан Seafood</h2>
                                 <p class="card-group">Приложение</p>
@@ -98,9 +92,7 @@
                     </li>
                     <li class="item">
                         <a href="#" class="card">
-                            <div class="card-thumb">
-                                <img src="./images/potrfolio-prime-project.jpg" alt="project-prime" width="370" height="294">
-                            </div>
+                            <img src="./images/potrfolio-prime-project.jpg" alt="project-prime" width="370" height="294">
                             <div class="card-content">
                                 <h2 class="card-name">Проект Prime</h2>
                                 <p class="card-group">Маркетинг</p>
@@ -109,9 +101,7 @@
                     </li>
                     <li class="item">
                         <a href="#" class="card">
-                            <div class="card-thumb">
-                                <img src="./images/potrfolio-boxes-project.jpg" alt="project-boxes" width="370" height="294">
-                            </div>
+                            <img src="./images/potrfolio-boxes-project.jpg" alt="project-boxes" width="370" height="294">
                             <div class="card-content">
                                 <h2 class="card-name">Проект Boxes</h2>
                                 <p class="card-group">Приложение</p>
@@ -120,9 +110,7 @@
                     </li>
                     <li class="item">
                         <a href="#" class="card">
-                            <div class="card-thumb">
-                                <img src="./images/potrfolio-inspiration.jpg" alt="inspiration-has-no-borders" width="370" height="294">
-                            </div>
+                            <img src="./images/potrfolio-inspiration.jpg" alt="inspiration-has-no-borders" width="370" height="294">
                             <div class="card-content">
                                 <h2 class="card-name">Inspiration has no Borders</h2>
                                 <p class="card-group">Веб-сайт</p>
@@ -131,9 +119,7 @@
                     </li>
                     <li class="item">
                         <a href="#" class="card">
-                            <div class="card-thumb">
-                                <img src="./images/potrfolio-limited-edition.jpg" alt="limited-edition-ed" width="370" height="294">
-                            </div>
+                            <img src="./images/potrfolio-limited-edition.jpg" alt="limited-edition-ed" width="370" height="294">
                             <div class="card-content">
                                 <h2 class="card-name">Издание Limited Edition</h2>
                                 <p class="card-group">Дизайн</p>
@@ -142,9 +128,7 @@
                     </li>
                     <li class="item">
                         <a href="#" class="card">
-                            <div class="card-thumb">
-                                <img src="./images/potrfolio-lab-project.jpg" alt="project-lab" width="370" height="294">
-                            </div>
+                            <img src="./images/potrfolio-lab-project.jpg" alt="project-lab" width="370" height="294">
                             <div class="card-content">
                                 <h2 class="card-name">Проект LAB</h2>
                                 <p class="card-group">Маркетинг</p>
@@ -153,9 +137,7 @@
                     </li>
                     <li class="item">
                         <a href="#" class="card">
-                            <div class="card-thumb">
-                                <img src="./images/potrfolio-growing-business.jpg" alt="growing-business" width="370" height="294">
-                            </div>
+                            <img src="./images/potrfolio-growing-business.jpg" alt="growing-business" width="370" height="294">
                             <div class="card-content">
                                 <h2 class="card-name">Growing Business</h2>
                                 <p class="card-group">Приложение</p>
